--- a/public/css/color-switcher-design.css
+++ b/public/css/color-switcher-design.css
@@ -15,12 +15,13 @@
     box-shadow: 0 0 20px 1px rgba(0, 0, 0, 0.1);
     height: 180px;
     position: fixed;
-    left: -285px;
+    left: 0px;
     text-align: center;
     top: 40%;
     transition: all 0.5s ease 0s;
-    width: 285px;
+    width: 0px;
     z-index: 999;
+    transform: rotate(360deg)
 }
 
 .color-palate-head {
@@ -129,15 +130,22 @@
 .color-trigger {
     background: #007aff none repeat scroll 0 0;
     cursor: pointer;
-    height: 50px;
-    right: -46px;
-    position: absolute;
-    top: 0;
-    width: 46px;
-    padding-top: 6px;
+    height: 44px;
+    right: -42px;
+    position: fixed;
+    /* position: absolute; */
+    top: 50%;
+    width: 128px;
+    padding-top: 13px;
+    transform: rotate(270deg);
+    font-size: 14px;
+    text-align: center;
+    color: #ffffff;
+    font-weight: 600;
+    border-radius: 12px 12px 0px 0px;
 }
 
-.color-trigger:before{
+/* .color-trigger:before{
 	content:'';
 	position:absolute;
 	left:0px;
@@ -145,7 +153,7 @@
 	width:100%;
 	height:100%;
 	background:rgba(0,0,0,0.20);	
-}
+} */
 
 .color-trigger i {
     color: #ffffff;
