--- a/public/css/style.css
+++ b/public/css/style.css
@@ -2375,10 +2375,15 @@ text-shadow: 0 1px 0 #ddd, 0 2px 0 #ccc, 0 3px 0 #bbb, 0 4px 0 #aaa, 0 5px 0 #ac
 ====================================================================
 
 ***/
+.check{
+	padding-right: 10px;
+    color: #16e416;
+}
 
 .about-two{
+	
 	position:relative;
-	background:#f2f9ff;
+	/*background:#f2f9ff;*/
 	padding:0px 0px;
 }
 
