--- a/public/css/style.css
+++ b/public/css/style.css
@@ -2351,7 +2351,7 @@ text-shadow: 0 1px 0 #ddd, 0 2px 0 #ccc, 0 3px 0 #bbb, 0 4px 0 #aaa, 0 5px 0 #ac
 	line-height:1.3em;
 	color:#00325d;
 	font-weight:600;
-	text-transform:capitalize;
+	/*text-transform:capitalize;*/
 	margin-bottom:15px;
 }
 
@@ -6101,6 +6101,13 @@ text-shadow: 0 1px 0 #ddd, 0 2px 0 #ccc, 0 3px 0 #bbb, 0 4px 0 #aaa, 0 5px 0 #ac
     background-image: url(../images/main-slider/image-2.jpg);
     background-size: 200%;
     animation: movimiento 20s infinite linear alternate;
+	background-repeat: no-repeat;
+}
+
+.imgback{
+	width: 100%;
+	height: 300px;
+	background-image: url(../images/background/fondo.jpg);
 	background-repeat: no-repeat;
 }
 
