--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1148,6 +1148,18 @@ text-shadow: 0 1px 0 #ddd, 0 2px 0 #ccc, 0 3px 0 #bbb, 0 4px 0 #aaa, 0 5px 0 #ac
 	left:50%;
 	margin-left:-25px;
 }
+.sec-title-two.centered2:before{
+	width: 126px;
+    left: 5%;
+	margin-left: -32px;
+	border-bottom: 5px solid#63f726	
+}
+.sec-title-two.centered3:before{
+	width: 126px;
+    left: 20%;
+	margin-left: -32px;
+	border-bottom: 5px solid#63f726	
+}
 
 .sec-title-two.light h1,
 .sec-title-two.light .text{
