--- a/public/css/style.css
+++ b/public/css/style.css
@@ -83,6 +83,9 @@ font-family: 'Raleway', sans-serif;*/
 ====================================================================
 
  ***/
+ div > h2 > a active{
+	background-color: red;
+ }
  .caract-cart{
 	border: 1px solid #75777952;
 	background:#fff;
