--- a/public/css/responsive.css
+++ b/public/css/responsive.css
@@ -634,9 +634,11 @@
 		padding-top:0px;	
 	}
 	
+	/*
 	.page-title{
 		padding:70px 0px;	
 	}
+	*/
 	
 	.careers-page .left-side .side-widget .widget-inner,
 	.careers-page .left-side h3{
