--- a/public/css/style.css
+++ b/public/css/style.css
@@ -3595,14 +3595,25 @@ text-shadow: 0 1px 0 #ddd, 0 2px 0 #ccc, 0 3px 0 #bbb, 0 4px 0 #aaa, 0 5px 0 #ac
 
 ***/
 
+.grecaptcha-badge {
+	width: 70px !important;
+	overflow: hidden !important;
+	transition: all 0.3s ease !important;
+	left: 4px !important;
+}
+
+.grecaptcha-badge:hover {
+	width: 256px !important;
+}
+
 .page-title{
 	position:relative;
 	background:#f2f9ff;
-	padding:100px 0px;
+	/**padding:100px 0px;**/
 }
 
 .page-title .image-layer{
-	position:absolute;
+	/**position:absolute;**/
 	left:0px;
 	top:0px;
 	width:100%;
