--- a/public/css/style.css
+++ b/public/css/style.css
@@ -3600,6 +3600,7 @@ text-shadow: 0 1px 0 #ddd, 0 2px 0 #ccc, 0 3px 0 #bbb, 0 4px 0 #aaa, 0 5px 0 #ac
 	overflow: hidden !important;
 	transition: all 0.3s ease !important;
 	left: 4px !important;
+	z-index: 1;
 }
 
 .grecaptcha-badge:hover {
