--- a/public/css/style.css
+++ b/public/css/style.css
@@ -83,6 +83,33 @@ font-family: 'Raleway', sans-serif;*/
 ====================================================================
 
  ***/
+ .button-conten-webcas{
+	transition:none; 
+	line-height:15px; 
+	border-width:0px; 
+	margin:0px; 
+	padding:0px; 
+	letter-spacing:0px; 
+	font-weight:400; 
+	font-size:10px;
+	padding-bottom:20px;
+ }
+ .button-webcas{
+	transition: none !important; 
+	text-align: inherit !important; 
+	line-height: 24px !important; 
+	border-width: 2px !important; 
+	margin: 0px !important; 
+	padding: 15px 45px 11px !important; 
+	letter-spacing: 1px !important; 
+	font-weight: 600 !important; 
+	font-size: 24px !important;
+	text-decoration:none !important;
+	width: 50% !important;
+	border-color: #3ccc00 !important; 
+	background: #3ccc00 !important;
+	text-transform: none !important;
+ }
  a:hover, a:focus {
     color: black;
     text-decoration: none;
