--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1194,12 +1194,12 @@ text-shadow: 0 1px 0 #ddd, 0 2px 0 #ccc, 0 3px 0 #bbb, 0 4px 0 #aaa, 0 5px 0 #ac
 .sec-title-two.centered2:before{
 	width: 126px;
     left: 3%;
-	border-bottom: 5px solid#63f726	
+	border-bottom: 5px solid#00325d	
 }
 .sec-title-two.centered3:before{
 	width: 126px;
     left: 3%;
-	border-bottom: 5px solid#63f726	
+	border-bottom: 5px solid#00325d	
 }
 
 .sec-title-two.light h1,
