--- a/public/css/style.css
+++ b/public/css/style.css
@@ -83,7 +83,30 @@ font-family: 'Raleway', sans-serif;*/
 ====================================================================
 
  ***/
- 
+ .button-conten-carrusel{
+	transition: none !important; 
+	line-height: 15px !important; 
+	border-width: 0px !important; 
+	margin: 0px !important; 
+	padding: 0px !important; 
+	letter-spacing:0px !important; 
+	font-weight: 400 !important; 
+	font-size: 10px !important;
+ }
+ .button-carrusel{
+	transition: none !important; 
+	text-align: inherit !important; 
+	line-height: 24px !important; 
+	border-width: 2px !important; 
+	margin: 0px !important; 
+	padding: 15px 45px 11px !important; 
+	letter-spacing: 1px !important; 
+	font-weight: 600 !important; 
+	font-size: 16px !important;
+	border-color: #3ccc00 ; 
+	background: #3ccc00 ;
+ }
+
  .button-conten-webcas{
 	transition:none; 
 	line-height:15px; 
@@ -95,6 +118,7 @@ font-family: 'Raleway', sans-serif;*/
 	font-size:10px;
 	padding-bottom:20px;
  }
+ 
  .button-webcas{
 	transition: none !important; 
 	text-align: inherit !important; 
