--- a/public/css/style.css
+++ b/public/css/style.css
@@ -6230,6 +6230,18 @@ text-shadow: 0 1px 0 #ddd, 0 2px 0 #ccc, 0 3px 0 #bbb, 0 4px 0 #aaa, 0 5px 0 #ac
 	background-repeat: no-repeat;
 	background-size: cover;
 }
+
+@media (min-width: 767px){	
+	.size-cap-1{
+		padding-right: 110px !important;
+	}
+}
+@media (min-width: 767px){	
+	.size-cap-2{
+		padding-left: 103px !important;
+	}
+}
+
 @media (max-width: 767px){
 	.imgback{
 		height: 320px !important;
