--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1970,6 +1970,7 @@ text-shadow: 0 1px 0 #ddd, 0 2px 0 #ccc, 0 3px 0 #bbb, 0 4px 0 #aaa, 0 5px 0 #ac
 }
 
 .news-block-one .text{
+	font-size: 15px;
 	position:relative;
 	line-height:1.60em;
 	font-weight:500;
