--- a/public/css/color-themes/default-theme.css
+++ b/public/css/color-themes/default-theme.css
@@ -67,6 +67,21 @@
 	color:#00325d !important;	
 }
 
+h2 {	
+	position: relative;
+    font-size: 30px;
+    font-weight: 700;
+    color: #00325d;
+    line-height: 1.2em
+}  
+
+h3 {	
+	position: relative;
+    font-size: 22px;
+    font-weight: 700;
+    color: #00325d;
+    line-height: 1.2em
+}
 
 /*Background Color*/
 
