--- a/public/css/style.css
+++ b/public/css/style.css
@@ -246,6 +246,14 @@ img{
 	-ms-transition:all 0.3s ease;
 	-o-transition:all 0.3s ease;
 }
+.theme-btn2{
+	display:inline-block;
+	transition:all 0.3s ease;
+	-moz-transition:all 0.3s ease;
+	-webkit-transition:all 0.3s ease;
+	-ms-transition:all 0.3s ease;
+	-o-transition:all 0.3s ease;
+}
 
 .centered{
 	text-align:center;	
@@ -295,6 +303,13 @@ img{
 	background:none;
 	color:#00325d;
 	border-color:#00325d;
+}
+
+
+.btn-cotisation:hover{
+	background:none;
+	color:#00325d;
+	border-color:#fdfdfd;
 }
 
 .btn-style-three{
@@ -463,7 +478,7 @@ img{
 	position:relative;
 	float:left;
 	line-height:30px;
-	margin-right:50px;	
+	margin-right:30px;	
 }
 
 .main-header .header-top .info li a{
@@ -481,6 +496,18 @@ img{
 	line-height:27px;
 	padding-top:3px;
 	color:#00325d;
+}
+
+.btn-cotisation {
+	padding-left: 0px !important;
+	padding-top: 0px !important;
+	position: relative;
+    padding: 0px 0px 0px;
+    line-height: 24px;
+    background: #062c4c;
+    color: #ffffff;
+    border:1px solid #056adc;
+    border-radius: 30px;
 }
 
 .main-header .header-top .info li .icon{
@@ -3329,6 +3356,8 @@ text-shadow: 0 1px 0 #ddd, 0 2px 0 #ccc, 0 3px 0 #bbb, 0 4px 0 #aaa, 0 5px 0 #ac
 	line-height:1.3em;
 	text-transform:capitalize;
 	margin-bottom:10px;	
+	color: #fff;
+
 }
 
 .callback-box .callback-header .text{
