--- a/public/css/style.css
+++ b/public/css/style.css
@@ -498,6 +498,12 @@ img{
 	color:#00325d;
 }
 
+.letra {
+	font-family: -apple-system,BlinkMacSystemFont,
+	"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif,
+	"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
+}
+
 .btn-cotisation {
 	padding-left: 0px !important;
 	padding-top: 0px !important;
