--- a/public/css/style.css
+++ b/public/css/style.css
@@ -4401,7 +4401,7 @@ text-shadow: 0 1px 0 #ddd, 0 2px 0 #ccc, 0 3px 0 #bbb, 0 4px 0 #aaa, 0 5px 0 #ac
 .popular-category-list li a{
 	position:relative;
 	color:#666666;
-	font-size:16px;
+	font-size:18px;
 	padding:14px 12px;
 	display:block;
 	font-weight:400;
@@ -4410,13 +4410,62 @@ text-shadow: 0 1px 0 #ddd, 0 2px 0 #ccc, 0 3px 0 #bbb, 0 4px 0 #aaa, 0 5px 0 #ac
 	-webkit-transition:all 500ms ease;
 	-ms-transition:all 500ms ease;
 	-o-transition:all 500ms ease;
-	border-bottom:1px solid #0679fc;
+	text-decoration:none;
+	
+	/* border-bottom:1px solid #0679fc; */
 }
 
 .popular-category-list li a:hover{
-	color:#007aff;
+	color:#00325d;
+	background: #3085e236;
+	text-decoration:none;
 }
 
+.popular-category-list2{
+	position:relative;
+	color:#666666;
+	font-size:18px;
+	padding:14px 12px;
+	display:block;
+	font-weight:400;
+	transition:all 500ms ease;
+	-moz-transition:all 500ms ease;
+	-webkit-transition:all 500ms ease;
+	-ms-transition:all 500ms ease;
+	-o-transition:all 500ms ease;
+	text-decoration:none;
+	
+	/* border-bottom:1px solid #0679fc; */
+}
+
+.popular-category-list2:hover{
+	color:#00325d;
+	background: #3085e236;
+	text-decoration:none;
+}
+
+.btn-leer-mas{
+	text-decoration: none  !important;
+	padding-right: 14px;
+    padding-top: 8px;
+    padding-left: 14px;
+    padding-bottom: 8px;
+	font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    color: #00325d !important;
+    background-color: #fff;
+    border-radius: 2px;
+    border: 1px solid #00325d;
+}
+
+.btn-leer-mas:hover{
+	color: #007aff !important;;
+	background-color:#fff ;
+	border: 1px solid #007aff;
+}
+
+.borde2:hover{
+	/* border: 1px solid #007aff; */
+}
 /*Latest Posts*/
 
 .latest-posts{
@@ -4430,13 +4479,14 @@ text-shadow: 0 1px 0 #ddd, 0 2px 0 #ccc, 0 3px 0 #bbb, 0 4px 0 #aaa, 0 5px 0 #ac
 }
 
 .latest-posts .post{
-	position:relative;
-	font-size:15px;
-	color:#696969;
-	padding:0px 0px;
-	padding-left:82px;
-	min-height:72px;
-	margin-bottom:30px;
+	position: relative;
+    font-size: 15px;
+    color: #696969;
+    padding: 0px 0px;
+    padding-left: 82px;
+    min-height: 90px;
+    padding-top: 8px;
+    /* margin-bottom: 20px; */
 }
 
 .latest-posts .post:last-child{
